# connect-the-bots

./: .gitignore  AGENTS.local.md  AGENTS.md  Cargo.toml  README.md  install.sh
.cargo/: config.toml
.tldr/: languages.json
crates/: AGENTS.md
crates/attractor-agent/: AGENTS.md
crates/attractor-agent/src/: AGENTS.md  fidelity.rs  lib.rs  loop_detection.rs  prompt_builder.rs  subagent.rs  test_utils.rs
crates/attractor-cli/: AGENTS.md
crates/attractor-cli/src/: AGENTS.md  main.rs
crates/attractor-cli/src/commands/: AGENTS.md  decompose.rs  generate.rs  info.rs  launch.rs  mod.rs  plan.rs  run.rs  scaffold.rs  validate.rs
crates/attractor-dot/: AGENTS.md  Cargo.toml
crates/attractor-dot/benches/: AGENTS.md  parse.rs
crates/attractor-dot/src/: AGENTS.md  duration_serde.rs  lib.rs  parser.rs
crates/attractor-llm/: AGENTS.md
crates/attractor-llm/src/: AGENTS.md  anthropic.rs  client.rs  gemini.rs  openai.rs  provider.rs  types.rs
crates/attractor-pipeline/: AGENTS.md  Cargo.toml
crates/attractor-pipeline/benches/: AGENTS.md  graph.rs
crates/attractor-pipeline/src/: AGENTS.md  checkpoint.rs  condition.rs  edge_selection.rs  engine.rs  graph.rs  handler.rs  interviewer.rs  lib.rs  retry.rs  stylesheet.rs  transforms.rs  validation.rs
crates/attractor-pipeline/src/handlers/: AGENTS.md  codergen_handler.rs  mod.rs  wait_human.rs
crates/attractor-pipeline/tests/: AGENTS.md  integration.rs
crates/attractor-tools/: AGENTS.md  CLAUDE.md
crates/attractor-tools/src/: AGENTS.md  lib.rs  local_env.rs  truncation.rs
crates/attractor-tools/src/builtin/: AGENTS.md  edit_file.rs  glob.rs  grep.rs  read_file.rs  shell.rs
crates/attractor-types/: AGENTS.md  Cargo.toml
crates/attractor-types/benches/: AGENTS.md  context.rs
crates/attractor-types/src/: AGENTS.md  lib.rs
crates/attractor-web/: AGENTS.md  Cargo.toml  package.json
crates/attractor-web/public/: AGENTS.md
crates/attractor-web/public/js/: AGENTS.md  xterm-setup.js
crates/attractor-web/src/: AGENTS.md  main.rs
crates/attractor-web/src/components/: AGENTS.md  approval_bar.rs  document_viewer.rs  execution_panel.rs  folder_picker.rs  layout.rs  project_sidebar.rs  terminal.rs
crates/attractor-web/src/server/: AGENTS.md  db.rs  documents.rs  execute.rs  projects.rs  terminal.rs
crates/attractor-web/style/: AGENTS.md  main.scss
docs/: AGENTS.md  accept-execute-c4-dot.md  accept-execute-c4.md  cli-reference.md  dot-dialect.md  emergence-analysis.md  guide.md  task-verification.md  web-interface-plan.md
docs/examples/: AGENTS.md
docs/plans/: 2026-04-09-feat-reckoner-software-factory-plan.md  2026-04-14-fix-codebase-audit-outstanding-issues.md
pipelines/: AGENTS.md  phase-1-spec.dot  phase-1-spec.dot.bak
scripts/: AGENTS.md  setup-fast-builds.sh
templates/: AGENTS.md  pas.md  prd-template.md  spec-template.md
