[workspace]
resolver = "2"
members = [
  "crates/attractor-types",
  "crates/attractor-dot",
  "crates/attractor-llm",
  "crates/attractor-tools",
  "crates/attractor-agent",
  "crates/attractor-pipeline",
  "crates/attractor-cli",
  "crates/attractor-web",
]

[workspace.package]
version = "0.6.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
reqwest = { version = "0.12", features = [
  "json",
  "stream",
  "rustls-tls",
], default-features = false }
futures-core = "0.3"
tokio-stream = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
globset = "0.4"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
# Thin LTO balances compile time vs runtime perf
lto = "thin"
# More codegen units = faster compile, slightly bigger binary
codegen-units = 16

[profile.dev]
# Faster dev builds
codegen-units = 256
incremental = true
