[package]
name = "attractor-dot"
version.workspace = true
edition = "2021"
license.workspace = true
description = "DOT parser for the strict Graphviz subset used by Attractor pipelines"

[dependencies]
attractor-types = { path = "../attractor-types" }
winnow = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parse"
harness = false
