[package]
name = "attractor-pipeline"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Pipeline execution engine, node handlers, validation, and edge selection"

[dependencies]
attractor-types = { path = "../attractor-types" }
attractor-dot = { path = "../attractor-dot" }
attractor-llm = { path = "../attractor-llm" }
attractor-tools = { path = "../attractor-tools" }
attractor-agent = { path = "../attractor-agent" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
attractor-dot = { path = "../attractor-dot" }
attractor-types = { path = "../attractor-types" }
criterion = { workspace = true }

[[bench]]
name = "graph"
harness = false
