[package]
name = "attractor-types"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Shared types, errors, context, and outcome for the Attractor pipeline engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "context"
harness = false
