[package]
name = "attractor-web"
version = "0.4.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", default-features = false }
leptos_router = { version = "0.7", default-features = false }
leptos_meta = { version = "0.7", default-features = false }
leptos_config = { version = "0.7" }
leptos_axum = { version = "0.7", optional = true }
axum = { version = "0.7", features = ["ws"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
pulldown-cmark = "0.12"
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
futures = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }
lazy_static = { version = "1.4", optional = true }
gloo-net = { version = "0.6", features = ["eventsource"], optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
web-sys = { version = "0.3", features = ["HtmlElement", "Window"], optional = true }
attractor-pipeline = { path = "../attractor-pipeline", optional = true }
attractor-dot = { path = "../attractor-dot", optional = true }
attractor-types = { path = "../attractor-types", optional = true }
chrono = { workspace = true, optional = true }
notify = { version = "7", optional = true }
portable-pty = { version = "0.9", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "io-util",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["sync", "macros"], optional = true }

[features]
default = []
hydrate = [
  "leptos/hydrate",
  "dep:wasm-bindgen",
  "dep:console_error_panic_hook",
  "dep:gloo-net",
  "dep:gloo-timers",
  "dep:web-sys",
  "dep:futures",
  "dep:js-sys",
]
ssr = [
  "leptos/ssr",
  "dep:leptos_axum",
  "dep:axum",
  "dep:tokio",
  "dep:tokio-stream",
  "dep:futures",
  "dep:lazy_static",
  "dep:attractor-pipeline",
  "dep:attractor-dot",
  "dep:attractor-types",
  "dep:chrono",
  "dep:notify",
  "dep:portable-pty",
  "dep:sqlx",
  "dep:tracing-subscriber",
  "dep:tower",
  "dep:tower-http",
]

[package.metadata.leptos]
output-name = "attractor-web"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:7777"
reload-port = 7778
browserquery = "defaults"
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-default-features = false
